--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,12 @@
 .Header{
+    position: fixed;
     width: 100%;
+    height: 10vh;
     background-color: #191D24;
     min-height: 64px;
 }
 .Header__image{
-
+    position: absolute;
     width: 100%;
     max-width: 384px;
     margin: 5px 0;
