--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,17 +1,21 @@
 .Header{
-    position: fixed;
-    width: 100%;
-    height: 10vh;
-    background-color: #191D24;
+    position: relative;
+    display: inline-block;
+    max-width: 100%;
     min-height: 64px;
 }
+.Header__imageContainer{
+    display: block;
+    max-width: 100%;
+}
 .Header__image{
-    position: absolute;
-    width: 100%;
-    max-width: 384px;
+    display: block;
+    max-width: 100%;
     margin: 5px 0;
     margin-left: 4px;
 }
-.Header__Filler{
-    width:  20px;
+@media (min-width: 321) {
+    .Header{
+
+    }
 }
